--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.application.name=inventory-service
 
 server.port=8082
-
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
