--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/order-service
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+spring.application.name=order-service
 
 server.port=8081
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
