--- a/discovery-server/pom.xml
+++ b/discovery-server/pom.xml
@@ -11,8 +11,8 @@
 
 	<artifactId>discovery-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>discovery-service</name>
-	<description>discovery-service</description>
+	<name>discovery-server</name>
+	<description>discovery-server</description>
 
 	<dependencies>
 		<dependency>
