--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
     <module>order-service</module>
     <module>product-service</module>
     <module>inventory-service</module>
+    <module>discovery-server</module>
+    <module>api-gateway</module>
   </modules>
 
   <properties>
